--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav class="botonera">
         <img
-          src="images/Logo.png"
+          src="src/Logo.png"
           alt="Instituto Tecnologico de Buenos Aires"
           class="img-nav"
         />
@@ -86,7 +86,7 @@
           <li>
             <a href="#"
               ><img
-                src="images/twitter.svg"
+                src="src/twitter.svg"
                 alt="Twitter ITBANK"
                 class="images-foot"
             /></a>
@@ -94,7 +94,7 @@
           <li>
             <a href="#"
               ><img
-                src="images/facebook.svg"
+                src="scr/facebook.svg"
                 alt="Facebook ITBANK"
                 class="images-foot"
             /></a>
@@ -102,7 +102,7 @@
           <li>
             <a href="#"
               ><img
-                src="images/instagram.svg"
+                src="scr/instagram.svg"
                 alt="Instagram ITBANK"
                 class="images-foot"
             /></a>
