--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <li>
             <a href="#"
               ><img
-                src="scr/facebook.svg"
+                src="src/facebook.svg"
                 alt="Facebook ITBANK"
                 class="images-foot"
             /></a>
@@ -102,7 +102,7 @@
           <li>
             <a href="#"
               ><img
-                src="scr/instagram.svg"
+                src="src/instagram.svg"
                 alt="Instagram ITBANK"
                 class="images-foot"
             /></a>
