Home page - homebanking

--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
             <a href="example.com" title="Ingrese aqui">Ingrese aqui</a>
           </p>
         </div>
-
-        <button type="submit" class="btn btn-position">Ingresar</button>
+          <a href="home.html" title="Ingresar">
+            <button type="submit" class="btn btn-position">Ingresar</button>
+          </a>
       </section>
     </main>
     <footer class="foot">
