--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" class="min-vh-100">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@200;300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/login.css" type="text/css" />
@@ -11,7 +14,7 @@
   </head>
   <body class="fondo">
     <header class="shadow">
-      <nav class="navbar navbar-expand-lg" style="background-color: #b7b7b7;">
+      <nav class="navbar navbar-expand-lg font-type text-dark" style="background-color: #b7b7b7;">
         <div class="container-fluid">
           <a class="navbar-brand ms-4" href="index.html"><img src="src/Logo.png" alt="Logo ITBANK"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -20,17 +23,17 @@
           <div class="collapse navbar-collapse me-4" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link text-dark" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link text-dark" href="#">Contacto</a>
               </li>
-              <li class="nav-item ">
-                <a class="nav-link" href="#">
+              <li class="nav-item">
+                <a class="nav-link text-dark" href="#">
                   Ayuda
                 </a>
               <li class="nav-item">
-                <a class="nav-link">Sobre Nosotros</a>
+                <a class="nav-link text-dark">Sobre Nosotros</a>
               </li>
             </ul>
           </div>
@@ -43,8 +46,8 @@
           <div class="col-12 col-md-6 col-lg-6 display-off">
             <div class="container py-3">
               <div class="ms-2 mt-5 m-3">
-                <h1 class="ms-3 pt-5 font-tam">Te damos la bienvenida <br> al home banking</h1>
-                <p class="mt-4 ms-4 fs-4">Creamos valor con y para vos</p>
+                <h1 class="ms-3 pt-5 font-tam font-type">Te damos la bienvenida <br> al home banking</h1>
+                <p class="mt-4 ms-5 fs-4 font-type">Creamos valor con y para vos</p>
               </div>
             </div>
 
@@ -57,7 +60,7 @@
                   <!-- MENU INTERACTIVO CLIENTO - NUEVO CLIENTE -->
 
                   <div class="mx-4 my-2 login-off">
-                    <ul class="nav nav-tabs nav-fill justify-content-center ">
+                    <ul class="nav nav-tabs nav-fill justify-content-center font-type">
                       <li class="nav-item ">
                         <a class="nav-link active" style="background-color:#dfdfdf ;" aria-current="page" href="#">Soy Cliente</a>
                       </li>
@@ -66,7 +69,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="mx-4 login2-onf">
+                  <div class="mx-4 login2-onf font-type">
                     <div class="dropdown">
                       <a class="btn dropdown-toggle" style="background-color:#dfdfdf ;" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                         Soy Cliente
@@ -77,7 +80,7 @@
                     </div>
                   </div>
 
-                  <p class="mx-4 my-4 fs-4">INGRESE ACA PARA OPERAR</p>
+                  <p class="mx-4 my-4 fs-4 font-type">Ingrese aca para operar</p>
                   <form action="">
                     <div class="form-floating mx-4 mt-3 mb-3">
                       <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -87,7 +90,7 @@
                       <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
                       <label for="floatingPassword">Clave</label>
                     </div>
-                    <div class="mx-4 mt-4 mb-3">
+                    <div class="mx-4 mt-4 mb-3 font-type">
                       <p class="px-2 py-4" style="background-color: #c9c9c9;">
                         Los datos de cuenta, Token de seguridad, los datos de tu tarjeta de coordenadas y tus claves personales. ¡No los compartas! Conocé más consejos de seguridad
                       </p>
@@ -96,7 +99,7 @@
                       <input class="btn rounded-5 text-light btn-lg ps-5 pe-5" style="background-color: #5a407a;" type="submit" value="Ingresar">
                     </div>
                   </form>
-                  <div class="m-2">
+                  <div class="m-2 font-type">
                     <p class="text-center">
                       ¿No tenés tu clave Santander?, <br>
                       ¿No recordás tu clave y/o usuario? <br>
@@ -112,7 +115,7 @@
     </main>
     <footer class="container-fluid position-absolute bottom-0" style="background-color: #d7d7d7; opacity: 0.7;">
       <div class="d-flex flex-wrap justify-content-between align-items-center py-2 mt-2 no-marign" style="margin: 0; padding: 0;">
-        <p class="col-md-4 mb-0 text-muted">&copy; 2022 ITBANK, Inc</p>      
+        <p class="col-md-4 mb-0">&copy; 2022 ITBANK, Inc</p>      
         <ul class="nav col-md-4 justify-content-end">
           <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"><img src="src/Play Store.png" style="width: 120px; height: 50px;"></a></li>
           <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
