--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
         </div>
       </div>
     </main>
-    <footer class="container-fluid position-absolute bottom-0" style="background-color: #d7d7d7; opacity: 0.7;">
-      <div class="d-flex flex-wrap justify-content-between align-items-center py-2 mt-2 no-marign" style="margin: 0; padding: 0;">
+    <footer class="container-fluid" style="background-color: #d7d7d7; opacity: 0.7;">
+      <div class="d-flex flex-wrap justify-content-between align-items-center mt-2 no-marign">
         <p class="col-md-4 mb-0">&copy; 2022 ITBANK, Inc</p>      
         <ul class="nav col-md-4 justify-content-end">
           <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"><img src="src/Play Store.png" style="width: 120px; height: 50px;"></a></li>
