--- a/home.html
+++ b/home.html
@@ -590,7 +590,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
-                  src="Images/descubri-01.webp"
+                  src="./images/descubri-01.webp"
                   class="d-block w-100"
                   alt="Promoción de seguro de celulares"
                 />
@@ -603,7 +603,7 @@
               </div>
               <div class="carousel-item">
                 <img
-                  src="Images/descubri-02.jpeg"
+                  src="./images/descubri-02.jpeg"
                   class="d-block w-100"
                   alt="Sumate a nuestro club de beneficios"
                 />
@@ -617,7 +617,7 @@
               </div>
               <div class="carousel-item">
                 <img
-                  src="Images/descubri-03.jpeg"
+                  src="./images/descubri-03.jpeg"
                   class="d-block w-100"
                   alt="Paga tus servicios online"
                 />
