--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="back">
           <ul>
             <li>
-              <a href="home.html" title="Preguntas Frecuentes"
+              <a href="-/home.html" title="Preguntas Frecuentes"
                 >Preguntas Frecuentes</a
               >
             </li>
