--- a/index.html
+++ b/index.html
@@ -96,7 +96,11 @@
                       </p>
                     </div>
                     <div class="m-5 text-center">
-                      <input class="btn rounded-5 text-light btn-lg ps-5 pe-5" style="background-color: #5a407a;" type="submit" value="Ingresar">
+                      <!-- BOTON PARA EL REQUERIMIENTO EN EL SERVIDOR?
+                      <input class="btn rounded-5 text-light btn-lg ps-5 pe-5" style="background-color: #5a407a;" href="https://www.google.com/" type="submit" value="Ingresar"> -->
+
+                      <!-- BOTON DE NAVEGACION PARA DEMO -->
+                      <a class="btn rounded-5 text-light btn-lg ps-5 pe-5" style="background-color: #5a407a;" href="./home.html" role="button">Ingresar</a>
                     </div>
                   </form>
                   <div class="m-2 font-type">
@@ -118,7 +122,7 @@
         <p class="col-md-4 mb-0">&copy; 2022 ITBANK, Inc</p>      
         <ul class="nav col-md-4 justify-content-end">
           <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"><img src="src/Play Store.png" style="width: 120px; height: 50px;"></a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted"><img src="src/Apple Store.svg" style="width: 103px; height: 50px;"></a></li>
         </ul>
       </div>
     </footer>
