--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <p class="text-center">
                       ¿No tenés tu clave Santander?, <br>
                       ¿No recordás tu clave y/o usuario? <br>
-                      Ingresá para obtener uno nuevo <a href="#">desde acá</a>
+                      Ingresá para obtener uno nuevo <a href="./index-contrasena.html">desde acá</a>
                     </p>
 
                 </div>
