--- a/home.html
+++ b/home.html
@@ -164,7 +164,7 @@
                         >
                       </li>
                       <li>
-                        <a class="dropdown-item" href="#"
+                        <a class="dropdown-item" href="compraDolar.html"
                           ><img src="" alt="" /><svg
                             xmlns="http://www.w3.org/2000/svg"
                             width="16"
