--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com"crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@200;300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="sass/custom.css" type="text/css">
+    <link rel="stylesheet" href="css/login.css" type="text/css">
     <link rel="shortcut icon" href="./images/icologo.ico" type="image/x-icon">
     <title>Online Banking | ITBANK</title>
   </head>
@@ -141,17 +141,17 @@
                                             <p class="fs-6">Disfruta de 6 meses sin cargo si cumplis con alguna de nuestras condiciones</p>
                                         </div>
                                         <div class="my-4">
-                                            <a class="btn rounded-5 text-light btn-lg ps-5 pe-5" style="background-color: #5a407a;" href="./home.html" role="button">Quiero saber mas</a>
+                                            <a class="btn rounded-5 text-light btn-lg ps-5 pe-5" style="background-color: #5a407a;" href="#" role="button">Quiero saber mas</a>
                                         </div>
                                     </div>
                                     <div class="rec text-center">
                                         <span>"Si no tenes u olvidaste tu clave y/o usuario"</span>
                                         <br>
-                                        <a href="" role="button">Crear clave y usuario</a>
+                                        <a href="./index-contrasena.html" role="button">Crear clave y usuario</a>
                                         <br>
                                         <span>"Si solo tenes clave"</span>
                                         <br>
-                                        <a href="" role="button">Crear usuario</a>
+                                        <a href="./index-contrasena.html" role="button">Crear usuario</a>
                                         <br>
                                     </div>
                                 </div>
