--- a/index-contrasena.html
+++ b/index-contrasena.html
@@ -17,7 +17,7 @@
     <header class="shadow">
       <nav class="navbar navbar-expand-lg font-type text-dark" style="background-color: #b7b7b7;">
         <div class="container-fluid">
-          <a class="navbar-brand ms-4" href="index.html"><img src="images/Logo.png" alt="Logo ITBANK"></a>
+          <a class="navbar-brand ms-4" href="index.html"><img src="images/logo-ITBANK.png" alt="Logo ITBANK"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
