--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
                       <input class="btn rounded-5 text-light btn-lg ps-5 pe-5" style="background-color: #5a407a;" href="https://www.google.com/" type="submit" value="Ingresar"> -->
 
                       <!-- BOTON DE NAVEGACION PARA DEMO -->
-                      <a class="btn rounded-5 text-light btn-lg ps-5 pe-5" style="background-color: #5a407a;" href="cargaAHome.html" role="button">Ingresar</a>
+                      <a class="btn rounded-5 text-light btn-lg ps-5 pe-5" style="background-color: #5a407a;" href="./cargaAHome.html" role="button">Ingresar</a>
                     </div>
                   </form>
                   <div class="m-2 font-type">
                     <p class="text-center">
-                      ¿No tenés tu clave ITbank?, <br>
+                      ¿No tenés tu clave ItBank?, <br>
                       ¿No recordás tu clave y/o usuario? <br>
                       Ingresá para obtener uno nuevo <a href="./index-contrasena.html">desde acá</a>
                     </p>
