--- a/home.html
+++ b/home.html
@@ -564,7 +564,7 @@
                     </div>
                   </div>
                 </div>
-                <a href="dolar.html" class="boton-primario d-flex justify-content-center btn mt-2">Ver todas las cotizaciones</a>
+                <a href="cotizaciones.html" class="boton-primario d-flex justify-content-center btn mt-2">Ver todas las cotizaciones</a>
 
             </div>
         </div>
