--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                             </p>
                                         </div>
                                         <div class="m-5 text-center">
-                                            <a class="btn rounded-5 text-light btn-lg ps-5 pe-5" style="background-color: #5a407a;" href="./home.html" role="button">Ingresar</a>
+                                            <a class="btn rounded-5 text-light btn-lg ps-5 pe-5" style="background-color: #5a407a;" href="./cargaAHome.html" role="button">Ingresar</a>
                                         </div>
                                     </form>
                                     <div class="m-2">
