--- a/cotizaciones.html
+++ b/cotizaciones.html
@@ -5,13 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cotizacion divisas Itbank</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-      crossorigin="anonymous"
-    />
     <link rel="stylesheet" href="./css/home.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    
     <link rel="shortcut icon" href="./images/icologo.ico" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/f69b4029b3.js"
@@ -501,6 +498,46 @@
             </div>
           </article>
         </div>
+      
+      </div>
+
+      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-int">
+          <div class="carousel-item active">
+            <img src="Images/dolar.1.jpg" class="carousel-photo" alt="DOLAR">
+            <div class="carousel-capt">
+              <h5>Nueva corrida cambiaria</h5>
+              <p>Argentina atraviesa una nueva corrida en el valor del dólar superando el record histórico.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="Images/tasadeinteres.jpg" class="carousel-photo" alt="tasaint">
+            <div class="carousel-capt">
+              <h5>Impacto de la última medida oficial sobre el mercado cambiario</h5>
+              <p>El Banco Central reaccionó con una importante suba en las tasas de interés ante el último dato de inflación y frente a las tensiones cambiarias.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="Images/JP.Morgan.jfif" class="carousel-photo" alt="jpmorgan">
+            <div class="carousel-capt">
+              <h5>Uno de los tres países más riesgosos para invertir</h5>
+              <p>Según JP Morgan, Argentina entra en el top 3 de países más riesgosos para invertir con un riesgo país alcanzó los 2190 puntos unicamente superado por Venezuela y El Salvador.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </main>
   </body>
